@@ -1,3 +1,12 @@
+2001-07-17  Anders Carlsson  <andersca@gnome.org>
+
+	* Makefile.am: Remove gconf-config and gconf.m4 from EXTRA_DIST
+	and do not try to install them.
+
+	* gconf.m4.in: Remove this file.
+
+	* gconf-config.in: Remove this file.
+
 2001-07-17  Darin Adler  <darin@bentspoon.com>
 
 	* gconf/gconf.c: (gconf_postinit):
